--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -10,6 +10,8 @@
     <ItemGroup>
         <PackageReference Include="Blazored.LocalStorage" Version="4.3.0" />
         <PackageReference Include="Blazored.Toast" Version="4.1.0" />
+        <PackageReference Include="Blazorise" Version="1.2.4" />
+        <PackageReference Include="MatBlazor" Version="2.10.0" />
         <PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="7.0.7" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.5" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.5" PrivateAssets="all" />
