--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -25,4 +25,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\Messages\Messages.razor" />
+    </ItemGroup>
+
 </Project>
