Addeed Create Category
PS : COMMIT DO PEDRO

--- a/Frontend/Frontend.csproj
+++ b/Frontend/Frontend.csproj
@@ -27,6 +27,7 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Pages\Messages\Messages.razor" />
+      <_ContentIncludedByDefault Remove="Models\Reports\EventsReport.razor" />
     </ItemGroup>
 
 </Project>
